--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = rent
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.rent
+PRODUCT_BUNDLE_IDENTIFIER = com.adi.rent
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
